--- a/歡迎使用_Colaboratory.ipynb
+++ b/歡迎使用_Colaboratory.ipynb
@@ -13,16 +13,40 @@
     {
       "cell_type": "code",
       "source": [
-        "score = int(input(\"請輸入正整數\"))\n",
-        "a=(score % 2)\n",
-        "if a == 0:\n",
-        " print(\"此數為偶數\")\n",
-        "elif a == 1:\n",
-        "  print(\"此數為奇數\")"
+        "n = int(input(\"請輸入一個整數: \"))\n",
+        "sum_total = 0\n",
+        "for i in range(1, n + 1):\n",
+        "    sum_total += i\n",
+        "print(f\"1到 {n} 的總和為 {sum_total}\")\n"
       ],
       "metadata": {
-        "id": "ShpK0VeYx1PD",
-        "outputId": "3b23b0fa-8403-496d-ab30-b2b49d5aa624",
+        "id": "F3nbtihyN4-Q",
+        "outputId": "153c4e79-ec4e-422e-eb62-49e514cf1bf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入一個整數: 10\n",
+            "1到 10 的總和為 55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,10,2):\n",
+        "   print(i,end=\",\")"
+      ],
+      "metadata": {
+        "id": "MOCuPLDJOewx",
+        "outputId": "c5a87e21-4c16-4ae5-fe00-73405693d44f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -33,8 +57,39 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入正整數30\n",
-            "此數為偶數\n"
+            "1,3,5,7,9,"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(9):\n",
+        "      print(\"happy\")\n"
+      ],
+      "metadata": {
+        "id": "_pyiSIuWOgmR",
+        "outputId": "ff9f7516-6114-4d88-c1f1-2cb9b0d2aa67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "happy\n",
+            "happy\n",
+            "happy\n",
+            "happy\n",
+            "happy\n",
+            "happy\n",
+            "happy\n",
+            "happy\n",
+            "happy\n"
           ]
         }
       ]
