--- a/歡迎使用_Colaboratory.ipynb
+++ b/歡迎使用_Colaboratory.ipynb
@@ -13,40 +13,19 @@
     {
       "cell_type": "code",
       "source": [
-        "n = int(input(\"請輸入一個整數: \"))\n",
-        "sum_total = 0\n",
-        "for i in range(1, n + 1):\n",
-        "    sum_total += i\n",
-        "print(f\"1到 {n} 的總和為 {sum_total}\")\n"
+        "temperature  = int(input(\"請輸入你的體溫\"))\n",
+        "if temperature >= 37.5:\n",
+        "    print(\"體溫高\")\n",
+        "elif 37 <= temperature <= 37.4:\n",
+        "    print(\"體溫略高\")\n",
+        "elif 34 <= temperature <= 36.9:\n",
+        "    print(\"體溫正常\")\n",
+        "else:\n",
+        "    print(\"體溫異常\")"
       ],
       "metadata": {
-        "id": "F3nbtihyN4-Q",
-        "outputId": "153c4e79-ec4e-422e-eb62-49e514cf1bf3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "請輸入一個整數: 10\n",
-            "1到 10 的總和為 55\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(1,10,2):\n",
-        "   print(i,end=\",\")"
-      ],
-      "metadata": {
-        "id": "MOCuPLDJOewx",
-        "outputId": "c5a87e21-4c16-4ae5-fe00-73405693d44f",
+        "id": "GFMoKzJGzHiR",
+        "outputId": "c869e9db-6fd1-4e9e-a510-045fee4d6120",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -57,7 +36,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1,3,5,7,9,"
+            "請輸入你的體溫36\n",
+            "體溫正常\n"
           ]
         }
       ]
@@ -65,12 +45,22 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(9):\n",
-        "      print(\"happy\")\n"
+        "score = int(input(\"請輸入成績\"))\n",
+        "sc=int(score)\n",
+        "if(sc>=90):\n",
+        "  print(\"A\")\n",
+        "elif(80<=sc<=89):\n",
+        "  print(\"B\")\n",
+        "elif(70<=sc<=79):\n",
+        "  print(\"c\")\n",
+        "elif(60<=sc<=69):\n",
+        "  print(\"D\")\n",
+        "else:\n",
+        "  print(\"E\")"
       ],
       "metadata": {
-        "id": "_pyiSIuWOgmR",
-        "outputId": "ff9f7516-6114-4d88-c1f1-2cb9b0d2aa67",
+        "id": "H3w1diRLzLlP",
+        "outputId": "e8855e96-3834-4e1a-ab16-d3df55e13e74",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -81,15 +71,42 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "happy\n",
-            "happy\n",
-            "happy\n",
-            "happy\n",
-            "happy\n",
-            "happy\n",
-            "happy\n",
-            "happy\n",
-            "happy\n"
+            "請輸入成績100\n",
+            "A\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "month = int(input(\"請輸入月份\"))\n",
+        "if month in [3, 4, 5]:\n",
+        "  print(\"春天\")\n",
+        "elif month in [6, 7, 8]:\n",
+        "  print(\"夏天\")\n",
+        "elif month in [9, 10, 11]:\n",
+        "  print(\"秋天\")\n",
+        "elif month in [12, 1, 2]:\n",
+        "  print(\"冬天\")\n",
+        "else:\n",
+        "  print(\"月份不在範圍內\")"
+      ],
+      "metadata": {
+        "id": "0XJU4Rb-zSVe",
+        "outputId": "398bdfa4-4ba2-496d-8f79-172b142260b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入月份5\n",
+            "春天\n"
           ]
         }
       ]
